# mpc_optimiser

./: .clang-format  .gitignore  CMakeLists.txt  README.md
math_utils/: dare.cc
mpc/: lateral_mpc_solver.cc  lateral_mpc_solver.h  lon_mpc_solver.cc  lon_mpc_solver.h  mpc_solver.cc  mpc_solver.h
proto/: mpc_config.proto
test/: test.cpp
utils/common_utils/: macros.h
utils/math_utils/: dare.cc  dare.h
